--- a/.github/workflows/AutoupdateToken.yml
+++ b/.github/workflows/AutoupdateToken.yml
@@ -7,12 +7,12 @@ on:
   push:
     tags:
     - 'v*'
-  #  branches: 
-  #    - master
+    branches: 
+      - master
   schedule:
     - cron: "45 0 * * *"
-  #watch:
-  #  types: [started]
+  watch:
+    types: [started]
    
 jobs:
   build:
